Web component integration

--- a/frontend/src/components/iot-info-card/iot-info-card.html
+++ b/frontend/src/components/iot-info-card/iot-info-card.html
@@ -1,4 +1,4 @@
-<template id="iot-card-template" iot-custom-web-component>
+<template id="iot-info-card-template" iot-custom-web-component>
   <style> 
     @import "../css/materialize.css"; 
   </style>
@@ -6,7 +6,7 @@
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">Badminton Court</span>
+          <span class="card-title"></span>
           <p id="badminton-court-count" class="count">10</p>
         </div>
         <div class="card-action">
@@ -17,4 +17,4 @@
     </div>
   </div>
 </template>
-<script src="iot-card.js"></script>
+<script src="iot-info-card.js"></script>
