--- a/frontend/src/components/iot-container/iot-container.html
+++ b/frontend/src/components/iot-container/iot-container.html
@@ -1,7 +1,6 @@
+<link rel="import" href="../bootstrap-css.html">
 <template id="iot-container-template" iot-custom-web-component>
-  <style> 
-    @import "../css/materialize.css"; 
-  </style>
-  <div id='strips'></div>
+  <div class="container" id="strips">
+  </div>
 </template>
 <script src="iot-container.js"></script>
