--- a/frontend/src/components/iot-strip/iot-strip.html
+++ b/frontend/src/components/iot-strip/iot-strip.html
@@ -1,8 +1,14 @@
+<link rel="import" href="../bootstrap-css.html">
 <template id="iot-strip-template" iot-custom-web-component>
-  <style> 
-    @import "../css/materialize.css"; 
-  </style>
   <div class="row">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title header"></h3>
+      </div>
+      <div class="panel-body info-card">
+        <h4>Test</h4>
+      </div>
+    </div>
   </div>
 </template>
 <script src="iot-strip.js"></script>
