--- a/frontend/src/components/iot-info-card/iot-info-card.html
+++ b/frontend/src/components/iot-info-card/iot-info-card.html
@@ -1,20 +1,7 @@
+<link rel="import" href="../bootstrap-css.html">
 <template id="iot-info-card-template" iot-custom-web-component>
-  <style> 
-    @import "../css/materialize.css"; 
-  </style>
-  <div class="row">
-    <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title"></span>
-          <p id="badminton-court-count" class="count">10</p>
-        </div>
-        <div class="card-action">
-          <a href="#">History</a>
-          <a href="#">Details</a>
-        </div>
-      </div>
-    </div>
+  <div class="col-md-4">
+    <p>card info will go here.</p>
   </div>
 </template>
 <script src="iot-info-card.js"></script>
