Setting up layout

--- a/frontend/src/components/iot-info-card/iot-info-card.html
+++ b/frontend/src/components/iot-info-card/iot-info-card.html
@@ -1,7 +1,14 @@
 <link rel="import" href="../bootstrap-css.html">
 <template id="iot-info-card-template" iot-custom-web-component>
   <div class="col-md-4">
-    <p>card info will go here.</p>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title header"></h3>
+      </div>
+      <div class="panel-body">
+        Panel content
+      </div>
+    </div>
   </div>
 </template>
 <script src="iot-info-card.js"></script>
