Stable UI version-1

--- a/frontend/src/components/iot-info-card/iot-info-card.html
+++ b/frontend/src/components/iot-info-card/iot-info-card.html
@@ -6,7 +6,7 @@
         <h3 class="panel-title header"></h3>
       </div>
       <div class="panel-body">
-        Panel content
+        <span class="count"></span>
       </div>
     </div>
   </div>
