firebase integration, ui changes, graph page

--- a/frontend/src/components/iot-strip/iot-strip.html
+++ b/frontend/src/components/iot-strip/iot-strip.html
@@ -1,9 +1,14 @@
 <link rel="import" href="../bootstrap-css.html">
 <template id="iot-strip-template" iot-custom-web-component>
-  <div class="row">
-    <div class="panel panel-default">
+  <style>
+    .office-name {
+      font-size:2em;
+    }
+  </style>
+  <div class="row" style="text-align:center;">
+    <div class="panel panel-default" style="min-height:28em">
       <div class="panel-heading">
-        <h3 class="panel-title header"></h3>
+        <span class="panel-title office-name"></span>
       </div>
       <div class="panel-body info-card">
       </div>
