--- a/frontend/src/components/iot-info-card/iot-info-card.html
+++ b/frontend/src/components/iot-info-card/iot-info-card.html
@@ -1,12 +1,32 @@
 <link rel="import" href="../bootstrap-css.html">
 <template id="iot-info-card-template" iot-custom-web-component>
-  <div class="col-md-4">
-    <div class="panel panel-info">
-      <div class="panel-heading">
+  <style>
+    .col-md-4 {
+      height:100%
+    }
+    .panel-info {
+      min-height:25em
+    }
+    /*div {
+      border-style:solid;
+      border-width:1px;
+    }*/
+  </style>
+  <div class="col-md-4" style="text-align:center">
+    <div class="panel panel-info" style="height:25em">
+      <div class="panel-heading" style="height:10%">
         <h3 class="panel-title header"></h3>
       </div>
-      <div class="panel-body">
-        <span class="count"></span>
+      <div class="panel-body" style="height:90%">
+        <div style="height:50%;">
+          <canvas class="count-anim"></canvas>
+        </div>
+        <div style="height:35%;">
+          <span class="count-text"></span>
+        </div>
+        <div style="height:15%;">
+          <a class="btn btn-default history" style="width:100%; height:90%" role="button">View history »</a>
+        </div>
       </div>
     </div>
   </div>
